--- a/_posts/2017-06-19-twiv.md
+++ b/_posts/2017-06-19-twiv.md
@@ -8,11 +8,11 @@ categories:
 
 Last week I got review on the new interface for tiling for vc4, and
 landed it in the kernel.  I've submitted Mesa patches to the list,
-landed the kernel backport in Raspbian, and have sent the Simon (the
+landed the kernel backport in Raspbian, and have sent Simon (the
 package maintainer at the Foundation) the Mesa patchset to backport
 all of my work from the last 6 months (unfortunately Raspbian
-generally doesn't update Mesa past the Debian stable release, so doing
-graphics work for them is very hard).  I also worked with Dom at the
+generally doesn't update Mesa past the Debian stable release, so
+graphics work for them has long delays).  I also worked with Dom at the
 Foundation to get an interface for the firmwarekms mode to do tiled
 scanout, so it will be as fast as the open source driver.
 
@@ -20,13 +20,13 @@ I also reworked the official 7" touchscreen panel driver again.  I had
 initially written it as a DSI panel driver, then got told it should be
 a bridge driver plus a panel driver, then the bridge maintainers told
 me it should be only one panel driver but attach to I2C.  Maybe this
-version will stick, who know.
+version will stick, who knows.
 
 My Mesa side for pl111 is now in master, so I've got the second
 platform for the vc4 driver basically done.  I can't wait to do
 another one.
 
-I got a question about whether VC4 could do ANDROID_native_fence, to
+I got a question about whether VC4 could do EGL_ANDROID_native_fence, to
 allow using Android's hwcomposer (the display server that puts
 surfaces in KMS planes if it can).  I spent a while looking into it,
 and found that while code had landed in Mesa for other drivers, the
