--- a/_posts/2017-07-10.md
+++ b/_posts/2017-07-10.md
@@ -25,7 +25,7 @@ streamed out to the window manager, and the window manager naively
 queues up a window move for each position it gets, rather than reading
 through all the position events it gets at once and sending a single
 move for the last one".  Instead, I worked on just seeing if we can
-speed up window movement so that's fast enough we don't care.
+speed up enough that we don't care.
 
 X11 opaque window dragging is a tough case, because unlike
 compositors, the contents of the window are stored on the screen
