--- a/_posts/2017-07-10.md
+++ b/_posts/2017-07-10.md
@@ -47,8 +47,7 @@ In my tracing, I found that the jobs being generated during window
 dragging were saying that they could modify any tile on the screen,
 not just the tiles being affected by the copy (so we read and write
 each tile on the screen for those jobs).  In many paths in glamor we
-use glScissor() to limit our rendering to some subset of the screen
-(for example, the clip region of the window for rectangle fills), and
+use glScissor() to limit our rendering to some subset of the screen, and
 this lets the GL keep our jobs trimmed to the appropriate size.
 However, copies and rectangle fills were scissoring only to the
 destination drawable's area, which for LXDE was everything but the
