--- a/_posts/2017-07-10-twiv.md
+++ b/_posts/2017-07-10-twiv.md
@@ -6,7 +6,7 @@ summary:    vc5, raspbian performance
 categories: 
 ---
 
-Last week I got permission to open source my work on the a Mesa-based
+Last week I got permission to open source my work on a Mesa-based
 VC5 3D driver for BCM7268.  You can see the announcement
 [here](https://lists.freedesktop.org/archives/mesa-dev/2017-July/162087.html)
 which I won't replicate on this blog.  TWIVC4 is going to be a lot of
