--- a/_posts/2017-08-01-twiv.md
+++ b/_posts/2017-08-01-twiv.md
@@ -22,7 +22,7 @@ rectangles at the top and bottom of your rounded window have 64x the
 cost they should, not even counting job dispatch overhead.
 
 So, I went back to the drawing board and wrote a new spec.  What I'm
-offering now is the control over the basic HW functionality: You can
+offering now is control over the basic HW functionality: You can
 flip a bit that says "Instead of tile raster order being HW-defined,
 you have two bits for left-to-right or right-to-left, and
 top-to-bottom or bottom-to-top."  Combined with GL_ARB_texture_barrier
