--- a/_posts/2017-08-01-twiv.md
+++ b/_posts/2017-08-01-twiv.md
@@ -38,11 +38,12 @@ with cache flushes in between.  However, his description of the
 breakdown process is already something that Glamor could do using
 GL_ARB_texture_barrier:
 
-    while (destination region is nonempty) {
-        this_region = destination region - (destination region translated by src offset);
+    while (dest_region is nonempty) {
+        src_region = dest_region + src copy offset
+        this_region = dest_region - src_region
         copy this region;
         glTextureBarrier();
-        destination region -= this_region
+        dest_region -= this_region
     }
 
 While I don't need to do this for VC4, since we have a better option
