--- a/_posts/2017-08-01-twiv.md
+++ b/_posts/2017-08-01-twiv.md
@@ -51,7 +51,7 @@ with my extension, it still seems like a good thing to implement.
 
 For VC4, I have x11perf -copywinwin500 performing the same as the
 previous SW rasterization that Raspbian had.  Next week: fixing the
-interactivity now that the raw performance is in place
+interactivity now that the raw performance is in place.
 
 Other news tidbits this week:
 
