attempt to fix image

--- a/_posts/2018-05-30-twiv.md
+++ b/_posts/2018-05-30-twiv.md
@@ -28,7 +28,7 @@ look at samples within a chosen time range.  By including some useful
 perf tracepoints in our captures too, we can see when vblank is and
 when GPU jobs were running relative to it.
 
-![vc4 timeline]({{ site.url }}/assets/sysprof-gpu-timings.png)
+![vc4 timeline]({{site.url}}{{site.baseurl}}/assets/sysprof-gpu-timings.png)
 
 That's the first cut of throwing the events from a Raspberry Pi
 running fullscreen glxgears into the UI -- you've got the GPU's binner
