--- a/_posts/2018-09-07-twiv.md
+++ b/_posts/2018-09-07-twiv.md
@@ -9,7 +9,7 @@ categories:
 TWIV3D has been inactive for a bit, because I've been inactive for a
 bit.  On August 15th, we added Moss Anholt to our family:
 
-![moss]({{site.url}}{{site.baseurl}}/assets/moss-on-eric.png)
+![moss]({{site.url}}{{site.baseurl}}/assets/moss-on-eric.jpg)
 
 So most of my time has been spent laying around with them and keeping
 us fed instead of writing software.
